--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -1,24 +1,41 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+
+:root{
+    --fonte1: Verdana, Geneva, Tahoma, sans-serif;
+    --fonte2: "Passion One", sans-serif;
+    --fonte3: "Sriracha", cursive;
+}
+
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body{
     min-height: 98vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header{
+     
     background-color: black;
     color: white;
     text-align: center;
 }
 
 header > h1{
+    font-family: var(--fonte2);
+    font-size: 10vw;
     padding-top: 50px;
     font-variant: small-caps;
+
 }
 
 header > p{
@@ -36,6 +53,8 @@ a:hover{
 }
 
 section{
+    font-size: 3.5vw;
+    font-family: var(--fonte3);
     padding-top: 10vh;
     padding-left: 30px;
     padding-bottom: 10vh;
@@ -54,7 +73,8 @@ section.imagem{
 }
 
 section.imagem > p{
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: rgba(0, 0, 0, 0.436);
 }
 
