--- a/desafios/desafio012/style.css
+++ b/desafios/desafio012/style.css
@@ -53,12 +53,16 @@ a:hover{
 }
 
 section{
-    font-size: 3.5vw;
+    font-size: 3.2vw;
     font-family: var(--fonte3);
     padding-top: 10vh;
     padding-left: 30px;
     padding-bottom: 10vh;
     line-height: 2em;
+}
+
+section > p{
+    padding-bottom: 2em;
 }
 
 section.normal{
@@ -67,20 +71,41 @@ section.normal{
 }
 
 section.imagem{
-    background-color: rgb(86, 86, 86);
-    color: white;
 
+    background-color: rgb(86, 86, 86);
+    background-size: cover;
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.433);
+    background-attachment: fixed;
 }
 
 section.imagem > p{
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.436);
+    background-color: rgba(0, 0, 0, 0.476);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img001{
+    background-image: url(imagens/background001.jpg);
+    background-position: right center;
+   
+}
+
+section#img002{
+    background-image: url(imagens/background002.jpg);
+    background-position: right center;
+    
 }
 
 footer{
     background-color: black;
     text-align: center;
     padding: 10px;
+}
+
+footer p{
+    font-family: var(--fonte1);
+    color: white;
 }
 
